--- a/index.html
+++ b/index.html
@@ -1,18 +1,80 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <title>WebStudio</title>
+  </head>
+  <body>
     <header>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+        <nav>
+        <a href="" lang="en">WebStudio</a>
+            <ul>
+                <li><a href="">Студія</a></li>
+                <li><a href="">Портфоліо</a></li>
+                <li><a href="">Контакти</a></li>
+              </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
-</body>
+    <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+    </section>
+    <section>
+        <ul>
+        <li>
+            <h2>Увага до деталей</h2>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        </li>
+        <li>
+            <h2>Пунктуальність</h2>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+        </li>
+        <li>
+            <h2>Планування</h2>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        </li>
+        <li>
+            <h2>Сучасні технології</h2>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        </li>
+        </ul>
+    </section>
+        <section>
+            <h2>Чим ми займаємося</h2>
+        <ul>
+            <li><img src="./images/box 1.jpg" alt="Кодування"></li>
+            <li><img src="./images/box 2.jpg" alt="Синхронізація"></li>
+            <li><img src="./images/box 3.jpg" alt="Візуалізація"></li>
+        </ul>
+        </section>
+        <section>
+            <h2>Чим ми займаємося</h2>
+        <ul>
+            <li><img src="./images/box 1.jpg" alt="Кодування"></li>
+            <li><img src="./images/box 2.jpg" alt="Синхронізація"></li>
+            <li><img src="./images/box 3.jpg" alt="Візуалізація"></li>
+        </ul>
+        </section>
+        <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li><img src="./images/team card 1.jpg" alt="Ігорьок"></li>
+            <div>Ігор Дем'яненко</div>
+            <div>Product Designer</div>
+            <li><img src="./images/team card 2.jpg" alt="Ольчик"></li>
+            <div>Ольга Рєпіна</div>
+            <div>Frontend Developer</div>
+            <li><img src="./images/team card 3.jpg" alt="Ніколя"></li>
+            <div>Микола Тарасов</div>
+            <div>Marketing</div>
+            <li><img src="./images/team card 4.jpg" alt="Мішаня"></li>
+            <div>Михайло Єрмаков</div>
+            <div>UI Designer</div>
+        </ul>
+    </section>
+  </body>
 </html>
