--- a/index.html
+++ b/index.html
@@ -46,32 +46,52 @@
         <section>
             <h2>Чим ми займаємося</h2>
         <ul>
-            <li><img src="./images/box 1.jpg" alt="Кодування"></li>
-            <li><img src="./images/box 2.jpg" alt="Синхронізація"></li>
-            <li><img src="./images/box 3.jpg" alt="Візуалізація"></li>
+            <li>
+                <img src="./images/box 1.jpg" alt="Кодування">
+            </li>
+            <li>
+                <img src="./images/box 2.jpg" alt="Синхронізація">
+            </li>
+            <li>
+                <img src="./images/box 3.jpg" alt="Візуалізація">
+            </li>
         </ul>
         </section>
         <section>
             <h2>Чим ми займаємося</h2>
         <ul>
-            <li><img src="./images/box 1.jpg" alt="Кодування"></li>
-            <li><img src="./images/box 2.jpg" alt="Синхронізація"></li>
-            <li><img src="./images/box 3.jpg" alt="Візуалізація"></li>
+            <li>
+                <img src="./images/box 1.jpg" alt="Кодування">
+            </li>
+            <li>
+                <img src="./images/box 2.jpg" alt="Синхронізація">
+            </li>
+            <li>
+                <img src="./images/box 3.jpg" alt="Візуалізація">
+            </li>
         </ul>
         </section>
         <section>
         <h2>Наша команда</h2>
         <ul>
-            <li><img src="./images/team card 1.jpg" alt="Ігорьок"></li>
+            <li>
+                <img src="./images/team card 1.jpg" alt="Ігорьок">
+            </li>
             <div>Ігор Дем'яненко</div>
             <div>Product Designer</div>
-            <li><img src="./images/team card 2.jpg" alt="Ольчик"></li>
+            <li>
+                <img src="./images/team card 2.jpg" alt="Ольчик">
+            </li>
             <div>Ольга Рєпіна</div>
             <div>Frontend Developer</div>
-            <li><img src="./images/team card 3.jpg" alt="Ніколя"></li>
+            <li>
+                <img src="./images/team card 3.jpg" alt="Ніколя">
+            </li>
             <div>Микола Тарасов</div>
             <div>Marketing</div>
-            <li><img src="./images/team card 4.jpg" alt="Мішаня"></li>
+            <li>
+                <img src="./images/team card 4.jpg" alt="Мішаня">
+            </li>
             <div>Михайло Єрмаков</div>
             <div>UI Designer</div>
         </ul>
