--- a/index.html
+++ b/index.html
@@ -47,27 +47,13 @@
             <h2>Чим ми займаємося</h2>
         <ul>
             <li>
-                <img src="./images/box 1.jpg" alt="Кодування">
+                <img src="./images/box 1.jpg" alt="Кодування" width="370">
             </li>
             <li>
-                <img src="./images/box 2.jpg" alt="Синхронізація">
+                <img src="./images/box 2.jpg" alt="Синхронізація" width="370">
             </li>
             <li>
-                <img src="./images/box 3.jpg" alt="Візуалізація">
-            </li>
-        </ul>
-        </section>
-        <section>
-            <h2>Чим ми займаємося</h2>
-        <ul>
-            <li>
-                <img src="./images/box 1.jpg" alt="Кодування">
-            </li>
-            <li>
-                <img src="./images/box 2.jpg" alt="Синхронізація">
-            </li>
-            <li>
-                <img src="./images/box 3.jpg" alt="Візуалізація">
+                <img src="./images/box 3.jpg" alt="Візуалізація" width="370">
             </li>
         </ul>
         </section>
@@ -75,22 +61,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/team card 1.jpg" alt="Ігорьок">
+                <img src="./images/team card 1.jpg" alt="Ігорьок" width="270">
             </li>
             <div>Ігор Дем'яненко</div>
             <div>Product Designer</div>
             <li>
-                <img src="./images/team card 2.jpg" alt="Ольчик">
+                <img src="./images/team card 2.jpg" alt="Ольчик" width="270">
             </li>
             <div>Ольга Рєпіна</div>
             <div>Frontend Developer</div>
             <li>
-                <img src="./images/team card 3.jpg" alt="Ніколя">
+                <img src="./images/team card 3.jpg" alt="Ніколя" width="270">
             </li>
             <div>Микола Тарасов</div>
             <div>Marketing</div>
             <li>
-                <img src="./images/team card 4.jpg" alt="Мішаня">
+                <img src="./images/team card 4.jpg" alt="Мішаня" width="270">
             </li>
             <div>Михайло Єрмаков</div>
             <div>UI Designer</div>
