--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/team-card 1.jpg" alt="Ігорьок" width="270">
+                <img src="./images/team-card-1.jpg" alt="Ігорьок" width="270">
             </li>
             <div>Ігор Дем'яненко</div>
             <div>Product Designer</div>
             <li>
-                <img src="./images/team-card 2.jpg" alt="Ольчик" width="270">
+                <img src="./images/team-card-2.jpg" alt="Ольчик" width="270">
             </li>
             <div>Ольга Рєпіна</div>
             <div>Frontend Developer</div>
             <li>
-                <img src="./images/team-card 3.jpg" alt="Ніколя" width="270">
+                <img src="./images/team-card-3.jpg" alt="Ніколя" width="270">
             </li>
             <div>Микола Тарасов</div>
             <div>Marketing</div>
             <li>
-                <img src="./images/team card-4.jpg" alt="Мішаня" width="270">
+                <img src="./images/team-card-4.jpg" alt="Мішаня" width="270">
             </li>
             <div>Михайло Єрмаков</div>
             <div>UI Designer</div>
