--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <ul>
             <li>
                 <img src="./images/team-card-1.jpg" alt="Ігорьок" width="270">
+                <p>Ігор Дем'яненко</p>
+                <p>Product Designer</p>
             </li>
-            <div>Ігор Дем'яненко</div>
-            <div>Product Designer</div>
             <li>
                 <img src="./images/team-card-2.jpg" alt="Ольчик" width="270">
             </li>
