Видаляє інші <div>

--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
             </li>
             <li>
                 <img src="./images/team-card-2.jpg" alt="Ольчик" width="270">
+                <p>Ольга Рєпіна</p>
+                <p>Frontend Developer</p>
             </li>
-            <div>Ольга Рєпіна</div>
-            <div>Frontend Developer</div>
             <li>
                 <img src="./images/team-card-3.jpg" alt="Ніколя" width="270">
+                <p>Микола Тарасов</p>
+                <p>Marketing</p>
             </li>
-            <div>Микола Тарасов</div>
-            <div>Marketing</div>
             <li>
                 <img src="./images/team-card-4.jpg" alt="Мішаня" width="270">
+                <p>Михайло Єрмаков</p>
+                <p>UI Designer</p>
             </li>
-            <div>Михайло Єрмаков</div>
-            <div>UI Designer</div>
         </ul>
     </section>
   </body>
