--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/team-card-1.jpg" alt="Ігорьок" width="270">
+                <img src="./images/img1.jpg" alt="Ігорьок" width="270">
                 <p>Ігор Дем'яненко</p>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/team-card-2.jpg" alt="Ольчик" width="270">
+                <img src="./images/img2.jpg" alt="Ольчик" width="270">
                 <p>Ольга Рєпіна</p>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/team-card-3.jpg" alt="Ніколя" width="270">
+                <img src="./images/img3.jpg" alt="Ніколя" width="270">
                 <p>Микола Тарасов</p>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/team-card-4.jpg" alt="Мішаня" width="270">
+                <img src="./images/img4.jpg" alt="Мішаня" width="270">
                 <p>Михайло Єрмаков</p>
                 <p>UI Designer</p>
             </li>
