--- a/index.html
+++ b/index.html
@@ -82,5 +82,13 @@
             </li>
         </ul>
     </section>
+    <footer>
+        <a href="" lang="en">WebStudio</a>
+        <address>
+            <p>м. Київ, пр-т Лесі Українки, 26</p>
+            <a href="mailto:info@devstudio.com">info@devstudio.comg</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
+    </footer>
   </body>
 </html>
