--- a/index.html
+++ b/index.html
@@ -86,9 +86,15 @@
         <a href="" lang="en">WebStudio</a>
         <address>
             <p>м. Київ, пр-т Лесі Українки, 26</p>
-            <a href="mailto:info@devstudio.com">info@devstudio.comg</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
+    </address>
     </footer>
   </body>
 </html>
