--- a/index.html
+++ b/index.html
@@ -9,36 +9,44 @@
   <body>
     <header>
         <nav>
-        <a href="" lang="en">WebStudio</a>
+        <a href="#" lang="en">WebStudio</a>
             <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+                <li><a href="#">Студія</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контакти</a></li>
               </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
     </header>
+<main>
     <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
     </section>
     <section>
+        <h2>Наші особливості та переваги</h2>
         <ul>
         <li>
-            <h2>Увага до деталей</h2>
+            <h3>Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
         <li>
-            <h2>Пунктуальність</h2>
+            <h3>Пунктуальність</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
-            <h2>Планування</h2>
+            <h3>Планування</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
         <li>
-            <h2>Сучасні технології</h2>
+            <h3>Сучасні технології</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
         </ul>
@@ -62,31 +70,35 @@
         <ul>
             <li>
                 <img src="./images/img1.jpg" alt="Ігорьок" width="270">
-                <p>Ігор Дем'яненко</p>
+                <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
                 <img src="./images/img2.jpg" alt="Ольчик" width="270">
-                <p>Ольга Рєпіна</p>
+                <h3>Ольга Рєпіна</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img3.jpg" alt="Ніколя" width="270">
-                <p>Микола Тарасов</p>
+                <h3>Микола Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
                 <img src="./images/img4.jpg" alt="Мішаня" width="270">
-                <p>Михайло Єрмаков</p>
+                <h3>Михайло Єрмаков</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
     </section>
+</main>
     <footer>
-        <a href="" lang="en">WebStudio</a>
+        <a href="#" lang="en">WebStudio</a>
         <address>
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
+            <p></p>
         <ul>
+            <li>
+                <a href="https://goo.gl/maps/vqTutgr8kKkj6SfA7" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
+            </li>
             <li>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
