Додає тег <lang>

--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
             <li>
                 <img src="./images/img1.jpg" alt="Ігорьок" width="270">
                 <h3>Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
+                <p lang="en">Product Designer</p>
             </li>
             <li>
                 <img src="./images/img2.jpg" alt="Ольчик" width="270">
                 <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
+                <p lang="en">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img3.jpg" alt="Ніколя" width="270">
                 <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
+                <p lang="en">Marketing</p>
             </li>
             <li>
                 <img src="./images/img4.jpg" alt="Мішаня" width="270">
                 <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
+                <p lang="en">UI Designer</p>
             </li>
         </ul>
     </section>
@@ -94,7 +94,6 @@
     <footer>
         <a href="#" lang="en">WebStudio</a>
         <address>
-            <p></p>
         <ul>
             <li>
                 <a href="https://goo.gl/maps/vqTutgr8kKkj6SfA7" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
